assets/sass/pages/_downloads.scss
#downloads-page {
  padding: 50px 0 0 0;
  display: grid;
    grid-template-columns:
      [full-start] minmax(1em, 1fr)
      [main-start] minmax(0, 80em) [main-end]
      minmax(1em, 1fr) [full-end];
    grid-row-gap: 1em;

  &> * {
    grid-column: main;
  }

  h1 {

  }

  .download-search {

    .search-wrapper {
      position: relative;

      &:before {
        font-family: 'Font Awesome\ 5 Free';
        font-size: 24px;
        font-weight: 900;
        color: #652f8f;
        content: "\f002";
        position: absolute;
        right: 15px;
        top: 50%;
        transform: translateY(-50%);
      }
    }

    input {
      width: 40%;
      height: 50px;
      padding: 15px;
      border-radius: 5px;
      border: 3px solid #652f8f;
      box-sizing: border-box;
    }

    .sort {
      float: right;
    }
  }

  .downloads-section {
    display: grid;
    grid-template-columns: repeat(4, minmax(200px, 1fr));
    grid-column-gap: 0.5em;
    grid-row-gap: 1.5em;

    .download {
      img {
        width: 100%;
      }

      a {
        display: block;
        height: 100%;
        background-color: #fff;
        padding: 5px 5px 5px 5px;
        color: #000;
        border: 1px solid #cecece;
        margin: 1px;
        border-radius: 5px;

        &:hover {
          border-radius: 5px;
          margin: 0px;
          border: 2px solid #e90e8b;
        }

      }

      h3 {
        font-size: 24px;
        font-weight: 500;
        margin: 5px 0 5px 0;
      }
    }
  }
}

@media (max-width: $screen-md) {
  #downloads-page {
    .downloads-section {
      grid-template-columns: repeat(2, minmax(200px, 1fr));
    }
  }
}

@media (max-width: $screen-xs-max) {
  #downloads-page {
    .download-search {
      input {
        width: 100%;
      }
    }
    .downloads-section {
      grid-template-columns: repeat(1, 1fr);
    }
  }
}

